# PDF_TLine_Extractor

./: .replit  database.db  final_verification_test.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  start.sh  test_all_functions.html  test_all_functions.py  test_hybrid_ultra.py  test_invoice.py  wsgi.py
app/: advanced_filters.py  ai_chat.py  ai_processor.py  bulletproof_extractor.py  data_extractor.py  enhanced_regex_processor.py  hybrid_processor.py  hybrid_ultra_extractor.py  optimized_processor.py  privacy_processor.py  regex_processor.py  robust_pdf_extractor.py
app/db/: database.py  models.py  queries.py
app/extractors/: __init__.py  call_extractor.py  main_extractor.py  message_extractor.py
app/templates/: analyzer.html  index.html  notes.html
attached_assets/: App Código_Actualizado_V5_1755041098434.txt  App SDK_Google-genai_V6_1755041098512.txt  V1_a_V6_extractor_PDF_1755043714544.txt  ai_studio_code (1)_1755039106710.sh  ai_studio_code_1755035961008.txt  ai_studio_code_1755035961043.sh  pdf-timeline-app_1755043714630.txt  pdf_processor_1755043743801.py  procesador_json_1755044183635.py  procesador_pdf_1755044183572.py  reporte_de_datos_1755043530546.csv
backend/: ai_enrichment.py  app.py  app_data.db  gunicorn.conf.py  models.py  parser.py  parser_clean.py  pyproject.toml
data/: app_data.db  timeline_data.db
docs/: ARCHITECTURE.md
frontend/: index.html  package.json
frontend/src/: App.jsx
tests/: analyze_pdf_format.py  test_all_functions.py  test_hybrid_ultra.py
tests/data/: app_data.db
trash/: PROJECT_ORGANIZATION.md  start.sh
trash/app/: ai_chat.py  (+5 more)
(+27 files in other folders)
