[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the Smart Invoice Analyzer"
authors = ["AI Assistant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"
PyMuPDF = "^1.23.26"
google-generativeai = "^0.4.0"
python-dotenv = "^1.0.1"
Flask-Cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"